--- a/index.html
+++ b/index.html
@@ -61,7 +61,23 @@
         </div>
     </div>
 
+    <!-- Service Section -->
 
+    <div class="services">
+        <h1>See what the hype is about</h1>
+        <div class="services__container">
+            <div class="services__card">
+                <h2>Experience Bliss</h2>
+                <p>AI Powered Technology</p>
+                <button>Get Started</button>
+            </div>
+            <div class="services__card">
+                <h2>Are you Ready ?</h2>
+                <p>Take The Leap</p>
+                <button>Get Started</button>
+            </div>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
