Solving bugs and adding responsive part of footer section

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         <div class="social__media">
             <div class="social__media--wrap">
                 <div class="footer__logo">
-                    <a href="/" id="footer__logo"><i class="fas faa-gem"></i>Victor</a>
+                    <a href="/" id="footer__logo"><i class="fas fa-gem"></i>Victor</a>
                 </div>
-                <p class="website__right">
+                <p class="website__rights">
                     © Victor 2021. All rights reserved
                 </p>
                 <div class="social__icons">
